--- a/src/main/resources/templates/admin/product/addProduct.html
+++ b/src/main/resources/templates/admin/product/addProduct.html
@@ -93,8 +93,8 @@
                                                     sanPhamManageDTO.loaiSanPhamId}"></option>
                                             </select>
                                             <small id="loaiSanPhamId" th:if="${#fields.hasErrors('loaiSanPhamId')}"
-                                            th:class="${#fields.hasErrors('loaiSanPhamId')}?
-                                                invalid-feedback : ''" th:errors="*{loaiSanPhamId}"></small> 
+                                                th:class="${#fields.hasErrors('loaiSanPhamId')}?
+                                                invalid-feedback : ''" th:errors="*{loaiSanPhamId}"></small>
                                         </div>
                                         <div class="col-2" style="padding-left: 0;">
                                             <a class="btn btn-outline-info"
@@ -109,7 +109,8 @@
                                             <label for="kieuDangId">Tên kiểu dáng:</label>
                                         </div>
                                         <div class="col-10" style="padding-right: 3px;">
-                                            <select class="form-control" name="kieuDangId" id="kieuDangId" th:classappend="${#fields.hasErrors('kieuDangId')}?
+                                            <select class="form-control" name="kieuDangId" id="kieuDangId"
+                                                th:classappend="${#fields.hasErrors('kieuDangId')}?
                                                 is-invalid : ''" th:field="*{kieuDangId}">
                                                 <option value="-1" selected>Chưa chọn</option>
                                                 <option th:each="item : ${lstKieuDang}" th:value="${item.id}"
@@ -131,7 +132,8 @@
                                     <div class="row">
                                         <div class="col-12"><label for="chatLieuId">Tên chất liệu:</label></div>
                                         <div class="col-10" style="padding-right: 3px;">
-                                            <select class="form-control" name="chatLieuId" id="chatLieuId" th:classappend="${#fields.hasErrors('chatLieuId')}?
+                                            <select class="form-control" name="chatLieuId" id="chatLieuId"
+                                                th:classappend="${#fields.hasErrors('chatLieuId')}?
                                             is-invalid : ''" th:field="*{chatLieuId}">
                                                 <option value="-1" selected>Chưa chọn</option>
                                                 <option th:each="item : ${lstChatLieu}" th:value="${item.id}"
@@ -152,14 +154,16 @@
                                     <div class="row">
                                         <div class="col-12"><label for="phongCachId">Tên phong cách:</label></div>
                                         <div class="col-10" style="padding-right: 3px;">
-                                            <select class="form-control" name="phongCachId" id="phongCachId" th:classappend="${#fields.hasErrors('phongCachId')}?
+                                            <select class="form-control" name="phongCachId" id="phongCachId"
+                                                th:classappend="${#fields.hasErrors('phongCachId')}?
                                                 is-invalid : ''" th:field="*{phongCachId}">
                                                 <option value="-1" selected>Chưa chọn</option>
                                                 <option th:each="item : ${lstPhongCach}" th:value="${item.id}"
                                                     th:text="${item.tenPhongCach}" th:selected="${item.id ==
                                                     sanPhamManageDTO.phongCachId}"></option>
                                             </select>
-                                            <small id="phongCachId" th:if="${#fields.hasErrors('phongCachId')}" th:class="${#fields.hasErrors('phongCachId')}?
+                                            <small id="phongCachId" th:if="${#fields.hasErrors('phongCachId')}"
+                                                th:class="${#fields.hasErrors('phongCachId')}?
                                                 invalid-feedback : ''" th:errors="*{phongCachId}"></small>
                                         </div>
                                         <div class="col-2" style="padding-left: 0;">
@@ -189,7 +193,7 @@
                         </h6>
                     </div>
                     <div class="col-sm-12 row">
-                        <div class="col-sm-4 mt-3">
+                        <div class="col-sm-4 mt-3" thcl>
                             <div class="row">
                                 <div class="col-12">
                                     <label for="kichCoIds">Tên kích cỡ:</label>
@@ -215,29 +219,29 @@
                         <div class="col-sm-4 mt-3 mb-3">
                             <div class="row">
                                 <div class="col-12"><label for="mauSacIds">Tên màu sắc:</label></div>
-                            <div class="col-10" style="padding-right: 3px;">
-                                <select class="selectpicker" name="mauSacIds" id="mauSacIds" th:field="*{mauSacIds}"
-                                    th:classappend="${#fields.hasErrors('mauSacIds')}?
+                                <div class="col-10" style="padding-right: 3px;">
+                                    <select class="selectpicker" name="mauSacIds" id="mauSacIds" th:field="*{mauSacIds}"
+                                        th:classappend="${#fields.hasErrors('mauSacIds')}?
                                     is-invalid : ''" multiple>
-                                    <option th:each="item : ${lstMauSac}" th:value="${item.id}">
-                                        <span>
-                                            <svg class="bd-placeholder-img rounded mr-2" width="20" height="20"
-                                                xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice"
-                                                focusable="false" role="img">
-                                                <rect width="100%" height="100%" fill="red"></rect>
-                                            </svg>
-                                            <span th:text="${item.tenMauSac}"></span>
-                                        </span>
-                                    </option>
-                                </select>
-                                <small id="mauSacIds" th:if="${#fields.hasErrors('mauSacIds')}" th:class="${#fields.hasErrors('mauSacIds')}?
+                                        <option th:each="item : ${lstMauSac}" th:value="${item.id}">
+                                            <span>
+                                                <svg class="bd-placeholder-img rounded mr-2" width="20" height="20"
+                                                    xmlns="http://www.w3.org/2000/svg"
+                                                    preserveAspectRatio="xMidYMid slice" focusable="false" role="img">
+                                                    <rect width="100%" height="100%" fill="red"></rect>
+                                                </svg>
+                                                <span th:text="${item.tenMauSac}"></span>
+                                            </span>
+                                        </option>
+                                    </select>
+                                    <small id="mauSacIds" th:if="${#fields.hasErrors('mauSacIds')}" th:class="${#fields.hasErrors('mauSacIds')}?
                                     invalid-feedback : ''" th:errors="*{mauSacIds}"></small>
-                            </div>
-                            <div class="col-2" style="padding-left: 0;">
-                                <a class="btn btn-outline-info"
-                                    onclick="openPopupIsShowSpeedAddProduct('Tên màu sắc', 'mauSac')">
-                                    <img th:src="@{/admin/img/icons/plus.svg}"></a>
-                            </div>
+                                </div>
+                                <div class="col-2" style="padding-left: 0;">
+                                    <a class="btn btn-outline-info"
+                                        onclick="openPopupIsShowSpeedAddProduct('Tên màu sắc', 'mauSac')">
+                                        <img th:src="@{/admin/img/icons/plus.svg}"></a>
+                                </div>
                             </div>
                         </div>
                         <div class="col-sm-4 mt-3 mb-3">
@@ -377,7 +381,9 @@
                                                 <a class="btn
                                                                 btn-outline-info
                                                                 btn-sm" id="info"><img
-                                                        th:src="@{/admin/img/icons/info.svg}" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="top" data-bs-content="Top popover"></a>
+                                                        th:src="@{/admin/img/icons/info.svg}" data-bs-container="body"
+                                                        data-bs-toggle="popover" data-bs-placement="top"
+                                                        data-bs-content="Top popover"></a>
                                                 <a class="btn
                                                                 btn-outline-primary
                                                                 btn-sm" th:href="@{'/admin/product/edit/'
@@ -434,23 +440,60 @@
                                         th:name="'inp-add-' + ${istat.index}" multiple
                                         th:field="*{lstHinhAnhMauSacDTO[__${istat.index}__].imgFiles}">
                                     <br>
+                                    <div class="row"
+                                        th:each="img, istatHAMS : *{lstHinhAnhMauSacDTO[__${istat.index}__].imgFilesString}">
+                                        <img alt="" th:id="'imgItem' + ${istat.index} + ${istatHAMS.index}"
+                                            width="120px" th:src="${'/admin/product/images/' + img}">
+                                        <input type="file" th:id="'inp-add-'+ ${istat.index} + ${istatHAMS.index}"
+                                            th:src="${'/admin/product/images/' + img}">
+                                        <script th:inline="javascript">
+                                            $(document).ready(function () {
+                                                var index1 = '[[${istat.index}]]';
+                                                var index2 = '[[${istatHAMS.index}]]';
+                                                $('#inp-add-'+ index1 + index2).on('ready', function () {
+                                                    var $plugin = $('#inp-add-' + index1).data('fileinput');
+                                                    $plugin.addToStack($(this)[0].files[0]);
+                                                })
+                                                $('#inp-add-' + index1).fileinput({
+                                                    uploadUrl: '#',
+                                                    //uploadUrl: 'http://localhost/plugins/test-upload',
+                                                    initialPreviewAsData: false,
+                                                    // initialPreview: [
+                                                        
+                                                    // ]
+                                                })
+                                            })
+                                        </script>
+                                    </div>
                                 </div>
                             </div>
                             <hr class="mt-2 mb-2">
-                            <script th:inline="javascript">
+                            <!-- <script th:inline="javascript">
                                 $(document).ready(function () {
                                     var index = '[[${istat.index}]]';
-                                    // $('#inp-add-' + '[[${istat.index}]]').on('change', function () {
-                                    //     var $plugin = $('#inp-add-').data('fileinput');
-                                    //     $plugin.addToStack($(this)[0].files[0])
-                                    // });
+                                    const imgFiles = JSON.parse('[[*{lstHinhAnhMauSacDTO[__${istat.index}__].imgFilesString}]]');
+                                    var httpLocal = "/admin/product/images/";
+                                    let lstImg = "";
+                                    $('kv-file-content')
+                                    imgFiles.forEach(function (item) {
+                                        lstImg = lstImg + '"' + httpLocal + item + '",';
+                                    });
+                                    const imgStr = lstImg.toString();
+                                    $('#inp-add-1').on('load', function () {
+                                        var $plugin = $('#inp-add-' + index).data('fileinput');
+                                        $plugin.addToStack($(this)[0].files[0]);
+                                    }
+
                                     $('#inp-add-' + index).fileinput({
                                         uploadUrl: '#',
                                         //uploadUrl: 'http://localhost/plugins/test-upload',
                                         initialPreviewAsData: true,
-                                    });
-                                });
-                            </script>
+                                        initialPreview: [
+                                            imgStr
+                                        ]
+                                    })
+                                })
+                            </script> -->
                         </div>
                     </div>
                     <hr>
