--- a/src/main/resources/templates/admin/hoadon/ChiTiethoaDon/CTDaGiao.html
+++ b/src/main/resources/templates/admin/hoadon/ChiTiethoaDon/CTDaGiao.html
@@ -467,29 +467,108 @@
 
     </style>
 
+    <style>
+        .card-title {
+            text-align: center;
+        }
+
+        body {
+            background: #eee;
+            margin-top: 20px;
+        }
+
+        .hori-timeline .events {
+            border-top: 3px solid #e9ecef;
+            display: flex;
+            justify-content: space-between;
+            flex-wrap: wrap;
+        }
+
+        .hori-timeline .events .event-list {
+            display: block;
+            position: relative;
+            text-align: center;
+            padding-top: 70px;
+            margin-right: 0;
+            width: 19.5%;
+            flex: 0 0 19.5%;
+            padding-bottom: 30px;
+        }
+
+        .hori-timeline .events .event-list:before {
+            content: "";
+            position: absolute;
+            height: 36px;
+            border-right: 2px dashed #dee2e6;
+            top: 0;
+        }
+
+        .hori-timeline .events .event-list .event-date {
+            position: absolute;
+            top: 20px;
+            left: 0;
+            right: 0;
+            width: 90px;
+            margin: 0 auto;
+            border-radius: 4px;
+            padding: 2px 4px;
+        }
+
+        @media (max-width: 900px) {
+            .hori-timeline .events .event-list {
+                width: 100%;
+                flex: 0 0 100%;
+            }
+        }
+
+        .bg-soft-primary {
+            background-color: rgba(64, 144, 203, 0.3) !important;
+        }
+
+        .bg-soft-success {
+            background-color: rgba(71, 189, 154, 0.3) !important;
+        }
+
+        .bg-soft-danger {
+            background-color: rgba(231, 76, 94, 0.3) !important;
+        }
+
+        .bg-soft-warning {
+            background-color: rgba(249, 213, 112, 0.3) !important;
+        }
+
+        .card {
+            border: none;
+            margin-bottom: 24px;
+            -webkit-box-shadow: 0 0 13px 0 rgba(236, 236, 241, 0.44);
+            box-shadow: 0 0 13px 0 rgba(236, 236, 241, 0.44);
+        }
+    </style>
+
+    <!-- TIMELINE-->
     <script th:inline="javascript">
-        function redirectToTatCaDon() {
-            window.location.href = "/admin/DonHang/TatCaDon";
-        }
+        $(document).ready(function () {
+            $('#modalChiTiet').on('show.bs.modal', function (event) {
+                var button = $(event.relatedTarget);
+                var hoaDonId = button.data('id');
+                var modal = $(this);
 
-        function redirectToChoxacNhan() {
-            window.location.href = "/admin/DonHang/ChoXacNhanDonHang";
-        }
+                $.ajax({
+                    url: '/giaodich/hoadon/DaGiaoHang/' + hoaDonId,
+                    type: 'GET',
+                    success: function (data) {
+                        modal.find('.modal-body1').html(data);
+                    },
+                    error: function () {
+                    }
+                });
+            });
+        });
+    </script>
 
-        function redirectToChoGiaoHang() {
-            window.location.href = "/admin/DonHang/ChoGiaoHang";
-        }
-
-        function redirectToDangGiao() {
-            window.location.href = "/admin/DonHang/DangGiaoHang";
-        }
-
-        function redirectToDaGiao() {
+    <script th:inline="javascript">
+        function quayLai() {
             window.location.href = "/admin/DonHang/DaGiaoHang";
-        }
-
-        function redirectToDahuy() {
-            window.location.href = "/admin/DonHang/DaHuyHang";
         }
     </script>
 
@@ -497,162 +576,119 @@
 
 <body>
 <div class="container" layout:fragment="content">
-    <div class="tab-buttons">
-        <button class="tab-button" onclick="redirectToTatCaDon()">Tất cả đơn</button>
-        <button class="tab-button" onclick="redirectToChoxacNhan()">Chờ xác nhận</button>
-        <button class="tab-button" onclick="redirectToChoGiaoHang()">Chờ giao hàng</button>
-        <button class="tab-button" onclick="redirectToDangGiao()">Đang giao</button>
-        <button class="tab-button active" onclick="redirectToDaGiao()">Đã giao</button>
-        <button class="tab-button" onclick="redirectToDahuy()">Đã hủy</button>
-    </div>
-    <h1>
-        Đã giao
-    </h1>
-    <div class="input-group mb-3">
-        <input type="text" class="form-control" placeholder="Tìm kiếm..." id="search-input-daGiao">
-        <div class="input-group-append">
-            <button class="btn btn-primary btnTimKiem" type="button" onclick="searchByIdDaGiao()">Tìm kiếm
-            </button>
-        </div>
+    <h1>CHI TIẾT HÓA ĐƠN</h1>
 
-        <input type="date" class="form-control" id="search-input-date-DaGiao">
-        <button class="btn btn-primary" type="button" onclick="searchByCreationDate()">
-            <i class="fas fa-search"></i>
-        </button>
+    <div th:object="${hoaDon}">
+        <p>Mã đơn: <span th:text="${hoaDon.maDon}"></span></p>
+        <p>Ngày tạo: <span th:text="${#dates.format(hoaDon.ngayTao, 'dd/MM/yyyy')}"></span></p>
+        <p>Tên khách hàng: <span th:text="${hoaDon.khachHang.hoTen}"></span></p>
+        <table class="table">
+            <thead>
+            <tr>
+                <th data-field="state" data-checkbox="true"></th>
+                <th scope="col">Tên sản phẩm</th>
+                <th scope="col">Đơn giá</th>
+                <th scope="col">Số lượng</th>
+                <th scope="col">Thành tiền</th>
+            </tr>
+            </thead>
+
+            <tbody>
+            <tr th:each="hdct : ${hoaDon.hoaDonChiTiets}">
+                <td></td>
+                <td
+                        th:text="${hdct.sanPhamChiTiet.sanPham.getTenSanPham()}">
+                </td>
+                <td th:text="${hdct.donGia}"></td>
+                <td th:text="${hdct.soLuong}"></td>
+                <td th:text="${hdct.tongTien}"></td>
+            </tr>
+            </tbody>
+        </table>
+
+        <p>Tổng tiền:
+            <span th:text="${hoaDon.tongTienDonHang}"></span>
+        </p>
     </div>
-    <table id="user-table-DaGiao" class="table">
-        <thead>
-        <tr>
-            <th scope="col">Mã đơn</th>
-            <th scope="col">Họ tên</th>
-            <th scope="col">Số điện thoại</th>
-            <th scope="col">Ngày tạo đơn</th>
-            <th scope="col">Tổng tiền</th>
-            <th scope="col">Ghi chú</th>
-            <th scope="col">Xem chi tiết</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="hoaDon : ${DaGiao}">
-            <th scope="row" th:text="${hoaDon.maDon}"></th>
-            <td th:text="${hoaDon.khachHang.hoTen}"></td>
-            <td th:text="${hoaDon.sdtNguoiNhan}"></td>
-            <td th:text="${#dates.format(hoaDon.ngayTao, 'dd/MM/yyyy')}"></td>
-            <td th:text="${hoaDon.tongTienHoaDon}"></td>
-            <td th:text="${hoaDon.ghiChu}"></td>
-            <td>
-                <div class="button-group-a">
-                    <div class="btn-group">
-                        <a th:href="@{'/ChiTietHoaDon/DaGiaoHang' + ${hoaDon.id}}" class="btn btn-warning btn-sm"
-                           type="submit">
-                            <i class="fas fa-info-circle"></i>
-                        </a>
+
+    <!--TIME LINE-->
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="hori-timeline" dir="ltr">
+                            <ul class="list-inline events">
+                                <li class="list-inline-item event-list" th:each="giaoDich1 : ${timeLineChoXacNhan}">
+                                    <div class="px-4">
+                                        <div class="event-date bg-soft-primary text-primary"><span
+                                                th:text="${#dates.format(giaoDich1.ngayTao, 'dd/MM/yyyy')}"></span>
+                                        </div>
+                                        <h5 class="font-size-16">Chờ xác nhận</h5>
+                                        <p class="text-muted">Thao tác: Chờ xác nhận</p>
+                                        <p class="text-muted">Người thao tác: <span
+                                                th:text="${giaoDich1.nguoiTao}"></span>
+                                        </p>
+                                    </div>
+                                </li>
+                                <li class="list-inline-item event-list" th:each="giaoDich : ${timeLineChoGiaoHang}">
+                                    <div class="px-4">
+                                        <div class="event-date bg-soft-success text-success"><span
+                                                th:text="${#dates.format(giaoDich.ngayTao, 'dd/MM/yyyy')}"></span></div>
+                                        <h5 class="font-size-16">Chờ giao hàng</h5>
+                                        <p class="text-muted">Thao tác: Giao hàng cho đơn vị vận chuyển</p>
+                                        <p class="text-muted">Người thao tác: <span
+                                                th:text="${giaoDich.nguoiTao}"></span>
+                                        </p>
+                                    </div>
+                                </li>
+                                <li class="list-inline-item event-list" th:each="giaoDich2 : ${timeLineDangGiaoHang}">
+                                    <div class="px-4">
+                                        <div class="event-date bg-soft-success text-success"><span
+                                                th:text="${#dates.format(giaoDich2.ngayTao, 'dd/MM/yyyy')}"></span>
+                                        </div>
+                                        <h5 class="font-size-16">Đang giao hàng</h5>
+                                        <p class="text-muted">Thao tác: Giao hàng cho đơn vị vận chuyển</p>
+                                        <p class="text-muted">Người thao tác: <span
+                                                th:text="${giaoDich2.nguoiTao}"></span></p>
+                                    </div>
+                                </li>
+                                <li class="list-inline-item event-list" th:each="giaoDich3 : ${timeLineDaGiaoHang}">
+                                    <div class="px-4">
+                                        <div class="event-date bg-soft-success text-success"><span
+                                                th:text="${#dates.format(giaoDich3.ngayTao, 'dd/MM/yyyy')}"></span>
+                                        </div>
+                                        <h5 class="font-size-16">Đang giao hàng</h5>
+                                        <p class="text-muted">Thao tác: Giao hàng cho đơn vị vận chuyển</p>
+                                        <p class="text-muted">Người thao tác: <span
+                                                th:text="${giaoDich3.nguoiTao}"></span></p>
+                                    </div>
+                                </li>
+                                <li class="list-inline-item event-list">
+                                    <div class="px-4">
+                                        <div class="event-date bg-soft-success text-success">Không</div>
+                                        <h5 class="font-size-16">Đơn hàng bị hủy</h5>
+                                        <p class="text-muted">Thao tác: Hủy đơn hàng</p>
+                                        <p class="text-muted">Người thao tác: Không có dữ liệu</span></p>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
-            </td>
-        </tr>
-        </tbody>
-    </table>
-    <div>
-        <ul class="pagination" th:classappend="${pageDaGiao > 0} ? '' : 'pagination-empty'">
-            <li th:each="pageNumber : ${#numbers.sequence(0, pageDaGiao - 1)}">
-                <a th:href="@{/admin/DonHang/DaGiaoHang(page=${pageNumber})}" th:text="${pageNumber}"></a>
-            </li>
-        </ul>
+            </div>
+        </div>
     </div>
-    <div class="alert alert-warning container mt-3 text-center" th:if="${#lists.isEmpty(DaGiao)}"
-         style="background-color: transparent; border: none;">
-        <span style="font-size: 1.2em;">Không có dữ liệu</span>
+
+    <div class="button-group">
+        <button class="action-button" onclick="quayLai()">Quay lại
+            <i class="fas fa-arrow-left"></i>
+        </button>
     </div>
 </div>
-
 </body>
 
 </html>
-
-<!-- JS TÌM HÓA ĐƠN ĐÃ GIAO-->
-<script th:inline="javascript">
-    function searchByIdDaGiao() {
-        var input = document.getElementById("search-input-daGiao").value.trim().toLowerCase();
-        var table = document.getElementById("user-table-DaGiao");
-        var rows = table.getElementsByTagName("tr");
-
-        var found = false; // Biến kiểm tra xem đã tìm thấy kết quả hay chưa
-
-        for (var i = 0; i < rows.length; i++) {
-            var orderIdCell = rows[i].getElementsByTagName("th")[0];
-            var customerNameCell = rows[i].getElementsByTagName("td")[1];
-            var phoneNumberCell = rows[i].getElementsByTagName("td")[2];
-            var totalPriceCell = rows[i].getElementsByTagName("td")[3];
-            var noteCell = rows[i].getElementsByTagName("td")[5];
-
-            if (orderIdCell && customerNameCell && phoneNumberCell && totalPriceCell && noteCell) {
-                var orderId = orderIdCell.textContent.trim().toLowerCase();
-                var customerName = customerNameCell.textContent.trim().toLowerCase();
-                var phoneNumber = phoneNumberCell.textContent.trim().toLowerCase();
-                var totalPrice = parseFloat(totalPriceCell.textContent.replace(/[^0-9.]/g, ''));
-                var note = noteCell.textContent.trim().toLowerCase();
-
-                if (
-                    orderId.indexOf(input) > -1 ||
-                    customerName.indexOf(input) > -1 ||
-                    phoneNumber.indexOf(input) > -1 ||
-                    totalPrice.toString().indexOf(input) > -1 ||
-                    note.indexOf(input) > -1
-                ) {
-                    rows[i].style.display = "";
-                    found = true; // Đánh dấu đã tìm thấy kết quả
-                } else {
-                    rows[i].style.display = "none";
-                }
-            }
-        }
-
-        if (!found) {
-            Array.from(rows).forEach(function (row) {
-                row.style.display = ""; // Hiển thị lại tất cả các dòng
-            });
-
-            Swal.fire({
-                icon: 'warning',
-                title: 'Không tìm thấy',
-                showConfirmButton: false,
-                timer: 1500
-            });
-        }
-    }
-</script>
-
-<script th:inline="javascript">
-    function searchByCreationDate() {
-        var inputDate = document.getElementById("search-input-date-DaGiao").value;
-        var table = document.getElementById("user-table-DaGiao");
-        var rows = table.getElementsByTagName("tr");
-
-        for (var i = 0; i < rows.length; i++) {
-            var creationDateCell = rows[i].getElementsByTagName("td")[2]; // Điều chỉnh chỉ mục nếu cần thiết
-
-            if (creationDateCell) {
-                var creationDate = creationDateCell.innerText;
-                var formattedCreationDate = formatDate(creationDate);
-
-                if (formattedCreationDate === inputDate) {
-                    rows[i].style.display = "";
-                } else {
-                    rows[i].style.display = "none";
-                }
-            }
-        }
-    }
-
-    function formatDate(dateString) {
-        var parts = dateString.split("/");
-        var day = parts[0];
-        var month = parts[1];
-        var year = parts[2];
-        return year + "-" + month + "-" + day;
-    }
-</script>
 
 
 
