--- a/src/main/resources/templates/admin/hoadon/TrangThaiHoaDon/ChoXacNhan.html
+++ b/src/main/resources/templates/admin/hoadon/TrangThaiHoaDon/ChoXacNhan.html
@@ -704,27 +704,6 @@
         });
     </script>
 
-    <!-- TIMELINE-->
-    <script th:inline="javascript">
-        $(document).ready(function () {
-            $('#modalChiTiet').on('show.bs.modal', function (event) {
-                var button = $(event.relatedTarget);
-                var hoaDonId = button.data('id');
-                var modal = $(this);
-
-                $.ajax({
-                    url: '/giaodich/hoadon/ChoXacNhan/' + hoaDonId,
-                    type: 'GET',
-                    success: function (data) {
-                        modal.find('.modal-body1').html(data);
-                    },
-                    error: function () {
-                    }
-                });
-            });
-        });
-    </script>
-
 </head>
 
 <body>
@@ -747,6 +726,11 @@
             <button class="btn btn-primary btnTimKiem" type="button" onclick="searchByIdChoXacNhan()">Tìm kiếm
             </button>
         </div>
+
+        <input type="date" class="form-control" id="search-input-date-choXacNhan">
+        <button class="btn btn-primary" type="button" onclick="searchByCreationDate()">
+            <i class="fas fa-search"></i>
+        </button>
     </div>
 
     <div class="hduong1">
@@ -802,6 +786,7 @@
             <th scope="col">Mã đơn</th>
             <th scope="col">Họ tên</th>
             <th scope="col">Số điện thoại</th>
+            <th scope="col">Ngày tạo đơn</th>
             <th scope="col">Tổng tiền</th>
             <th scope="col">Ghi chú</th>
             <th scope="col">Thao tác</th>
@@ -813,6 +798,7 @@
             <th scope="row" th:text="${hoaDon.maDon}"></th>
             <td th:text="${hoaDon.khachHang.hoTen}"></td>
             <td th:text="${hoaDon.sdtNguoiNhan}"></td>
+            <td th:text="${#dates.format(hoaDon.ngayTao, 'dd/MM/yyyy')}"></td>
             <td th:text="${hoaDon.tongTienHoaDon}"></td>
             <td th:text="${hoaDon.ghiChu}"></td>
             <td>
@@ -871,90 +857,10 @@
                     </div>
 
                     <!--XEM CHI TIẾT HÓA ĐƠN-->
-                    <button type="submit" class="btn btn-primary" data-toggle="modal"
-                            th:data-target="'#showHDCTByHDIdChoXacNhan-' + ${hoaDon.id}">
-                        <i class="fas fa-info-circle"></i>
-                    </button>
-                    <div class="modal fade" th:id="'showHDCTByHDIdChoXacNhan-' + ${hoaDon.id}" tabindex="-1"
-                         role="dialog" aria-labelledby="exampleModalLabelChoXacNhan" aria-hidden="true">
-                        <div class="modal-dialog" role="document">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="exampleModalLabelChoXacNhan">Chi tiết hóa
-                                        đơn</h5>
-                                    <button type="button" class="close" data-dismiss="modal"
-                                            aria-label="Close">
-                                        <span aria-hidden="true">&times;</span>
-                                    </button>
-                                </div>
-                                <div class="modal-body">
-                                    <p>Khách hàng:
-                                        <span th:text="${hoaDon.khachHang.hoTen}"></span>
-                                    </p>
-                                    <p>Ngày tạo:
-                                        <span
-                                                th:text="${#dates.format(hoaDon.ngayTao, 'dd/MM/yyyy')}"></span>
-                                    </p>
-                                    <table class="table">
-                                        <thead>
-                                        <tr>
-                                            <th data-field="state" data-checkbox="true"></th>
-                                            <th scope="col">Tên sản phẩm</th>
-                                            <th scope="col">Đơn giá</th>
-                                            <th scope="col">Số lượng</th>
-                                            <th scope="col">Thành tiền</th>
-                                        </tr>
-                                        </thead>
-
-                                        <tbody>
-                                        <tr th:each="hdct : ${hoaDon.hoaDonChiTiets}">
-                                            <td></td>
-                                            <td
-                                                    th:text="${hdct.sanPhamChiTiet.sanPham.getTenSanPham()}">
-                                            </td>
-                                            <td th:text="${hdct.donGia}"></td>
-                                            <td th:text="${hdct.soLuong}"></td>
-                                            <td th:text="${hdct.tongTien}"></td>
-                                        </tr>
-                                        </tbody>
-                                    </table>
-
-                                    <p>Tổng tiền:
-                                        <span th:text="${hoaDon.tongTienDonHang}"></span>
-                                    </p>
-
-                                </div>
-
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary"
-                                            data-dismiss="modal">Đóng
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!--XEM LỊCH SỬ ĐƠN HÀNG-->
-                    <button type="submit" class="btn btn-primary" data-toggle="modal" th:data-target="'#modalChiTiet'"
-                            th:data-id="${hoaDon.id}">
-                        <i class="fas fa-history"></i>
-                    </button>
-                    <div class="modal fade" th:id="'modalChiTiet'" tabindex="-1" aria-labelledby="exampleModalLabel"
-                         aria-hidden="true">
-                        <div class="modal-dialog modal-dialog-centered">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="exampleModalLabel">Lịch sử hóa đơn</h5>
-                                </div>
-                                <div class="modal-body1">
-
-                                </div>
-
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Đóng</button>
-                                </div>
-                            </div>
-                        </div>
+                    <div class="btn-group">
+                        <a th:href="@{'/ChiTietHoaDon/ChoXacNhan' + ${hoaDon.id}}" class="btn btn-warning btn-sm" type="submit">
+                            <i class="fas fa-info-circle"></i>
+                        </a>
                     </div>
                 </div>
             </td>
@@ -992,8 +898,8 @@
             var orderIdCell = rows[i].getElementsByTagName("th")[0];
             var customerNameCell = rows[i].getElementsByTagName("td")[1];
             var phoneNumberCell = rows[i].getElementsByTagName("td")[2];
-            var totalPriceCell = rows[i].getElementsByTagName("td")[3];
-            var noteCell = rows[i].getElementsByTagName("td")[4];
+            var totalPriceCell = rows[i].getElementsByTagName("td")[4];
+            var noteCell = rows[i].getElementsByTagName("td")[5];
 
             if (orderIdCell && customerNameCell && phoneNumberCell && totalPriceCell && noteCell) {
                 var orderId = orderIdCell.textContent.trim().toLowerCase();
@@ -1029,6 +935,37 @@
                 timer: 1500
             });
         }
+    }
+</script>
+
+<script th:inline="javascript">
+    function searchByCreationDate() {
+        var inputDate = document.getElementById("search-input-date-choXacNhan").value;
+        var table = document.getElementById("user-table-ChoXacNhan");
+        var rows = table.getElementsByTagName("tr");
+
+        for (var i = 0; i < rows.length; i++) {
+            var creationDateCell = rows[i].getElementsByTagName("td")[3]; // Điều chỉnh chỉ mục nếu cần thiết
+
+            if (creationDateCell) {
+                var creationDate = creationDateCell.innerText;
+                var formattedCreationDate = formatDate(creationDate);
+
+                if (formattedCreationDate === inputDate) {
+                    rows[i].style.display = "";
+                } else {
+                    rows[i].style.display = "none";
+                }
+            }
+        }
+    }
+
+    function formatDate(dateString) {
+        var parts = dateString.split("/");
+        var day = parts[0];
+        var month = parts[1];
+        var year = parts[2];
+        return year + "-" + month + "-" + day;
     }
 </script>
 
